--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>this line is here to show how merging works </p>
 
+<h2> hello this is ronit pushing an committ to github repo</h2>
+
 </body>
 </html>
 
