--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ style="width:100%;max-width:960px"></div>
 
 <h2> hello this is ronit pushing an committ to github repo</h2>
 
+
+  now learnig to so it on github ui
 </body>
 </html>
 
